<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My First App</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="debug_message">Debug Message</string>
    <string name="button_enable_bluetooth">Enable Bluetooth</string>
    <string name="button_search_devices">Search Devices</string>
    <string name="button_enable_discoverability">Enable Discoverability</string>
    <string name="title_activity_display_devices">Devices</string>
    <string name="send">Send</string>
    <string name="title_activity_chat">Chat</string>
    <string name="hello_world">Hello world!</string>

</resources>
