<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.myfirstapp.MainActivity" >

    <Button
        android:id="@+id/button_enable_bluetooth"
        android:layout_width="@dimen/button_menu_width"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="enableBluetooth"
        android:text="@string/button_enable_bluetooth" />

    <Button
        android:id="@+id/button_search_devices"
        android:layout_width="@dimen/button_menu_width"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_enable_bluetooth"
        android:layout_below="@+id/button_enable_bluetooth"
        android:layout_marginTop="20dp"
        android:onClick="searchDevices"
        android:text="@string/button_search_devices" />

    <Button
        android:id="@+id/button_enable_discoverability"
        android:layout_width="@dimen/button_menu_width"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_enable_bluetooth"
        android:layout_below="@+id/button_search_devices"
        android:layout_marginTop="20dp"
        android:onClick="enableDiscoverability"
        android:text="@string/button_enable_discoverability" />

    <Button
        android:id="@+id/button_send2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/edit_text_out2"
        android:layout_toRightOf="@+id/edit_text_out2"
        android:text="@string/send" 
        android:onClick="sendMessage" />

    <EditText
        android:id="@+id/edit_text_out2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/debug_message"
        android:layout_alignParentBottom="true"
        android:hint=""
        android:ems="10" >

    </EditText>

    <TextView
        android:id="@+id/debug_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_send2"
        android:layout_marginBottom="17dp"
        android:gravity="center"
        android:hint="@string/debug_message"
        android:textSize="20sp" />

</RelativeLayout>